# ai-trace

./: .gitignore  README.md  SECURITY.md  pyproject.toml
ai_trace/: __init__.py  cli.py  exceptions.py  step.py  tracer.py  writer.py
tests/: test_cli.py  test_tracer.py
